[project]
name = "hl"
version = "0.1.0"
description = "Personal highlight capture — source, highlight, note with search"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15",
    "mcp>=1.0",
]

[project.scripts]
hl = "hl.cli:main"
hl-mcp = "hl.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hl"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
